integrated with memory, add deployment scripts draft

--- a/env.example
+++ b/env.example
@@ -1,6 +1,13 @@
 DEEPGRAM_API_KEY=your_deepgram_api_key
 OPENAI_API_KEY=your_openai_api_key
+ANTHROPIC_API_KEY=your_anthropic_api_key
 CARTESIA_API_KEY=your_cartesia_api_key
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
+
+# Daily (for production video/audio rooms)
+DAILY_API_KEY=your_daily_api_key
+DAILY_API_URL=https://api.daily.co/v1
+
+# Twilio (for telephony)
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
