--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "python-dotenv==1.1.1",
     "loguru==0.7.3",
     "langgraph>=0.2.4",
-    "langmem>=0.0.28",
+    "langmem>=0.0.29",
     "pymongo==4.14.1",
     "openai>=1.74.0,<=1.99.1",
     "typing-extensions==4.15.0",
@@ -17,8 +17,16 @@ dependencies = [
     "langchain-mongodb==0.7.0",
     "langgraph-store-mongodb>=0.1.0",
     "langgraph-checkpoint-mongodb==0.2.0",
+    "langchain-openai>=0.2.0",
     "fastapi>=0.104.0",
-    "uvicorn>=0.24.0"
+    "uvicorn>=0.24.0",
+    "beautifulsoup4>=4.12.0",
+    "aiohttp>=3.9.0",
+    "PyPDF2>=3.0.0",
+    "firecrawl-py==4.3.6",
+    "pydantic>=2.0.0",
+    "pdfplumber>=0.10.0",
+    "langchain-anthropic>=0.3.20"
 ]
 
 [dependency-groups]
