--- a/deployment/configs/nginx.conf
+++ b/deployment/configs/nginx.conf
@@ -3,7 +3,7 @@
 
 server {
     listen 80;
-    server_name your-domain.com;  # Replace with your domain
+    server_name api.nudgedaily.app;  # Updated default; deploy script will sed-replace
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -111,11 +111,11 @@ server {
 # SSL configuration (after running certbot)
 server {
     listen 443 ssl http2;
-    server_name your-domain.com;  # Replace with your domain
+    server_name api.nudgedaily.app;  # Updated default; certbot will manage certs
 
     # SSL certificates (managed by certbot)
-    ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/api.nudgedaily.app/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.nudgedaily.app/privkey.pem;
     
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
