download model from S3

--- a/env.example
+++ b/env.example
@@ -4,10 +4,16 @@ ANTHROPIC_API_KEY=your_anthropic_api_key
 CARTESIA_API_KEY=your_cartesia_api_key
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority
 
-# Daily (for production video/audio rooms)
+# Daily (for production video/audi rooms)
 DAILY_API_KEY=your_daily_api_key
 DAILY_API_URL=https://api.daily.co/v1
 
 # Twilio (for telephony)
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
+
+# Model hosting (S3)
+S3_BUCKET=""
+AWS_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key
+AWS_DEFAULT_REGION=us-east-1
