--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "firecrawl-py==4.3.6",
     "pydantic>=2.0.0",
     "pdfplumber>=0.10.0",
-    "langchain-anthropic>=0.3.20"
+    "langchain-anthropic>=0.3.20",
+    "boto3>=1.34.0"
 ]
 
 [dependency-groups]
